feat: Adiciona upload de fotos e exclusão segura de solicitações

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -8,3 +8,8 @@ user = "neondb_owner"
 password = "npg_YNkW3fwKFzX7" 
 # A senha que estava no lugar dos asteriscos
 
+# >>>>> NOVA SEÇÃO <<<<<
+[cloudinary]
+cloud_name = "dgaqbdorp"
+api_key = "625724337699677"
+api_secret = "z9fxaonpnNfhWM01JghOvhlJvf4"
