feat: Adiciona autenticação com senha mestre

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -13,3 +13,6 @@ password = "npg_YNkW3fwKFzX7"
 cloud_name = "dgaqbdorp"
 api_key = "625724337699677"
 api_secret = "z9fxaonpnNfhWM01JghOvhlJvf4"
+
+[auth]
+master_password = "lab@gw2025"
