--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cachetools==6.2.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.3.0
+cloudinary==1.44.1
 colorama==0.4.6
 gitdb==4.0.12
 GitPython==3.1.45
@@ -37,3 +38,4 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
+xlsxwriter==3.2.9
